crates/md-cli/tests/snapshots/cmd_address_json__wpkh_mainnet_change_0.snap
---
source: crates/md-cli/tests/cmd_address_json.rs
expression: body
---
{
  "addresses": [
    {
      "address": "bc1q8c6fshw2dlwun7ekn9qwf37cu2rn755upcp6el",
      "chain": 1,
      "index": 0
    }
  ],
  "network": "mainnet",
  "schema": "md-cli/2"
}
