crates/md-cli/tests/snapshots/cmd_address_json__wpkh_testnet_receive_0.snap
---
source: crates/md-cli/tests/cmd_address_json.rs
expression: body
---
{
  "addresses": [
    {
      "address": "tb1q6rz28mcfaxtmd6v789l9rrlrusdprr9pqcpvkl",
      "chain": 0,
      "index": 0
    }
  ],
  "network": "testnet",
  "schema": "md-cli/2"
}
