crates/md-cli/tests/snapshots/cmd_address_json__wsh_2of2_mainnet_receive_0.snap
---
source: crates/md-cli/tests/cmd_address_json.rs
expression: body
---
{
  "addresses": [
    {
      "address": "bc1qpa7l8h70m9vjty6580zfhvkmu8xgu5g5gt7c86agydecu0yppd2s29csg0",
      "chain": 0,
      "index": 0
    }
  ],
  "network": "mainnet",
  "schema": "md-cli/2"
}
